Resource Group Name Dialog
Updated to reference new dialog name

--- a/Instructions/dotnet/Mod02/20532B_LAB_AK_02.md
+++ b/Instructions/dotnet/Mod02/20532B_LAB_AK_02.md
@@ -28,7 +28,7 @@
 
 5. In the **Resource group** blade, perform the following steps:
 
-  a. In the **Name** dialog box, provide the value **20532**.
+  a. In the **Resource group name** dialog box, provide the value **20532**.
 
   b. In the **Location** list, select the region that is closest to your current location.
 
