Resource Group Location Dialog

--- a/Instructions/dotnet/Mod02/20532B_LAB_AK_02.md
+++ b/Instructions/dotnet/Mod02/20532B_LAB_AK_02.md
@@ -30,7 +30,7 @@
 
   a. In the **Resource group name** dialog box, provide the value **20532**.
 
-  b. In the **Location** list, select the region that is closest to your current location.
+  b. In the **Resource group location** list, select the region that is closest to your current location.
 
 6. In the **Resource group** blade, click **Create**.
 
