Updated Task Name in both Module 2 Documents (Create a Virtual Network)

--- a/Instructions/dotnet/Mod02/20532B_LAB_02.md
+++ b/Instructions/dotnet/Mod02/20532B_LAB_02.md
@@ -54,7 +54,7 @@ The main tasks for this exercise are as follows:
 
 2. Create a new resource group using the name: **20532**.
 
-#### Task 3: Create a virtual network and a resource group
+#### Task 3: Create a Virtual Network
 
 1. View the list of virtual networks for your subscription.
 
