Virtual Network Blade
Updated name of Virtual Network blade

--- a/Instructions/dotnet/Mod02/20532B_LAB_AK_02.md
+++ b/Instructions/dotnet/Mod02/20532B_LAB_AK_02.md
@@ -44,7 +44,7 @@
 
 4. At the top of the **Virtual networks** blade, click the **Add** button.
 
-5. In the **Virtual network** blade, perform the following steps:
+5. In the **Create virtual network** blade, perform the following steps:
 
   a. In the **Name** dialog box, provide the value **vnet20532**.
 
@@ -60,7 +60,7 @@
 
   g. In the **Resource group** section, locate the dialog box and provide the value **20532**.
 
-6. In the **Virtual network** blade, click **Create**.
+6. In the **Create virtual network** blade, click **Create**.
 
 > **Results:** After completing this exercise, you will have a new virtual network and resource group in Azure
 
