--- a/Instructions/dotnet/Mod02/20532B_LAB_02.md
+++ b/Instructions/dotnet/Mod02/20532B_LAB_02.md
@@ -100,7 +100,7 @@ The main tasks for this exercise are as follows:
 
   - Performance: **Standard**
 
-  - Replication: **Locally Redundant (LRS)**  
+  - Replication: **Locally-redundant storage (LRS)**  
 
   - Resource Group: **20532**
 
@@ -114,7 +114,7 @@ The main tasks for this exercise are as follows:
 
 2. Create a new virtual machine using the template and the following details:
 
-  - Host Name: **vm20532**
+  - Name: **vm20532**
 
   - User Name: **Student**
 
