--- a/Instructions/dotnet/Mod02/20532B_LAB_AK_02.md
+++ b/Instructions/dotnet/Mod02/20532B_LAB_AK_02.md
@@ -86,7 +86,7 @@
 
   b. In the **Performance** section, ensure that the *Standard* option is selected.
 
-  b. Click on the **Replication** list and select the **Locally Redundant (LRS)** option.
+  b. Click on the **Replication** list and select the **Locally-redundant storage (LRS)** option.
 
   c. In the **Location** list, select the region closest to your current location.
 
@@ -120,7 +120,7 @@
 
 6. In the **Create virtual machine** blade that displays, click **Basics** and perform the following steps:
 
-  a. In the **Host Name** dialog box, provide the value **vm20532**.
+  a. In the **Name** dialog box, provide the value **vm20532**.
 
   b. In the **User Name** dialog box, provide the value **Student**.
 
