Updated Internet Explorer Download Instructions

--- a/Instructions/dotnet/Mod02/20532C_LAB_AK_02.md
+++ b/Instructions/dotnet/Mod02/20532C_LAB_AK_02.md
@@ -282,7 +282,7 @@
 
 12. If you are prompted to set up Internet Explorer 11, perform the following steps:
 
-  a. Select **Use recommended security and compatibility settings**.
+  a. Select **Use recommended security, privacy and compatibility settings**.
 
   b. Click **OK**.
 
