Updated Create VM blade name

--- a/Instructions/dotnet/Mod02/20532C_LAB_AK_02.md
+++ b/Instructions/dotnet/Mod02/20532C_LAB_AK_02.md
@@ -132,7 +132,7 @@
 
   f. Click **OK**.
 
-7. In the **Create VM** blade that displays, click **Size** and perform the following steps:
+7. In the **Create Virtual Machine** blade that displays, click **Size** and perform the following steps:
 
   a. Locate and click the **View all** hyperlink.
 
@@ -140,7 +140,7 @@
 
   c. Click the **Select** button.
 
-8. In the **Create VM** blade that displays, click **Settings** and perform the following steps:
+8. In the **Create Virtual Machine** blade that displays, click **Settings** and perform the following steps:
 
   a. Click the **Storage Account** section and then select **stor20532[your name here]**.
 
@@ -152,7 +152,7 @@
 
   e. Scroll down and click **OK**.
 
-9. In the **Create VM** blade that displays, click **Summary** and click **OK** to create the virtual machine using your specified configuration.
+9. In the **Create Virtual Machine** blade that displays, click **Summary** and click **OK** to create the virtual machine using your specified configuration.
 
   > **Note:** The creation of a new virtual machine can take anywhere between 10 to 15 minutes. You will see a notification on the Dashboard (home screen) when your virtual machine is created and running.
 
