Switched to HDD External Disk Type

--- a/Instructions/dotnet/Mod02/20532C_LAB_AK_02.md
+++ b/Instructions/dotnet/Mod02/20532C_LAB_AK_02.md
@@ -168,7 +168,7 @@
 
   a. In the **name** box, provide **vm20532-AllFiles**
 
-  b. For **Type**, select **Standard**.
+  b. For **Type**, select **HDD**.
 
   c. In the **Size (GiB)** dialog box, provide the value, **128**.
 
