--- a/Instructions/dotnet/Mod02/20532C_LAB_02.md
+++ b/Instructions/dotnet/Mod02/20532C_LAB_02.md
@@ -138,6 +138,8 @@ The main tasks for this exercise are as follows:
 
   - Size (GB): **128**
 
+  - Type: **HDD**
+
   - Storage Account: **stor20532[Your Name Here]**
 
   - Storage Container: **vhds**
