--- a/Instructions/dotnet/Mod02/20532C_LAB_AK_02.md
+++ b/Instructions/dotnet/Mod02/20532C_LAB_AK_02.md
@@ -148,7 +148,7 @@
 
   c. Click the **Subnet** section and then select **Apps**.
 
-  d. Leave default values for **Public IP Address**, **Network Security Group**, **Monitoring** and **Diagnostic Storage Account**.
+  d. Leave default values for **Public IP Address**, **Network Security Group (firewall)**, **Monitoring** and **Diagnostic Storage Account**.
 
   e. Scroll down and click **OK**.
 
