Added VM Disk Type to VM Creation
VM Disk Type defaults to SSD on some user's machines. This fix should make sure everyone creates a VM that reads a HDD disk.

--- a/Instructions/dotnet/Mod02/20532C_LAB_02.md
+++ b/Instructions/dotnet/Mod02/20532C_LAB_02.md
@@ -115,6 +115,8 @@ The main tasks for this exercise are as follows:
 2. Create a new virtual machine using the template and the following details:
 
   - Name: **vm20532**
+  
+  - VM disk type: **HDD**
 
   - User Name: **Student**
 
