--- a/Instructions/dotnet/Mod02/20532C_LAB_AK_02.md
+++ b/Instructions/dotnet/Mod02/20532C_LAB_AK_02.md
@@ -121,6 +121,8 @@
 6. In the **Create virtual machine** blade that displays, click **Basics** and perform the following steps:
 
   a. In the **Name** dialog box, provide the value **vm20532**.
+  
+  b. In the **VM disk type** list, select the value **HDD**.
 
   b. In the **User Name** dialog box, provide the value **Student**.
 
