Various Typos (Module 9)
Fixed various typos and spelling issues.

--- a/Instructions/dotnet/Mod09/20532C_LAB_09.md
+++ b/Instructions/dotnet/Mod09/20532C_LAB_09.md
@@ -205,7 +205,7 @@ The main tasks for this exercise are as follows:
 
 #### Task 1: Open the Azure PowerShell Console
 
-1. Open the **Microsoft Azure PowerShell** console window.
+1. Open the **Windows PowerShell** console window.
 
 #### Task 2: Authenticate to Azure Resource Manager Using PowerShell
 
@@ -225,7 +225,7 @@ The main tasks for this exercise are as follows:
 
     > **Note:** If you have multiple Azure subscriptions, you can use **Select-AzureRmSubscription** to select the appropriate subscription.
 
-#### Task 3: Create a resource group by using Windows PowerShell
+#### Task 3: Create a resource group by using PowerShell
 
 1.  Create a new instance of the **Resource group** by using following command and details:
 
@@ -262,7 +262,7 @@ The main tasks for this exercise are as follows:
 
 5.  Close Internet Explorer.
 
-6.  Switch to the **Microsoft Azure PowerShell** console window.
+6.  Switch to the **Windows PowerShell** console window.
 
 #### Task 4: Remove the resource group by using Windows PowerShell
 
