--- a/Instructions/dotnet/Mod09/20532C_LAB_AK_09.md
+++ b/Instructions/dotnet/Mod09/20532C_LAB_AK_09.md
@@ -18,13 +18,13 @@
 
 1.  You will be prompted with a list of pre-requisite applications. Click the **I Accept** button.
 
-1.  Wait for the installation process to complete.
+1.  Wait for the installation process to complete, then click **Finish**.
 
 1.  On the Start screen, click the down arrow to view all the applications, and then click **Command Prompt**.
 
 2.  Switch to the **Command Prompt** window.
 
-3.  To validate that the **azure** CLI command is avaialble, type the following command in the console, and then press Enter:
+3.  To validate that the **azure** CLI command is available, type the following command in the console, and then press Enter:
 
     ```
     azure --help
@@ -76,7 +76,7 @@
     azure account show
     ```
 
-    > **Note:** If you have multiple Azure subscriptions, you can use **Select-AzureSubscription** to select the appropriate subscription. If you are unsure about your subscription's name, you can simply use **azure account list**. If your Azure subscription is provided by a Learning Partner, it might be an auto-generated account without any details. In such a case, this command will return an empty result.
+    > **Note:** If you have multiple Azure subscriptions, you can use **azure account set [subscription-name]** to select the appropriate subscription. If you are unsure about your subscription's name, you can simply use **azure account list**. If your Azure subscription is provided by a Learning Partner, it might be an auto-generated account without any details. In such a case, this command will return an empty result.
 
 > **Results:** After completing this exercise, you will have set up a development environment to use xPlat CLI for Azure service automation.
 
@@ -137,7 +137,7 @@
 3.  To remove your new Web App, type the following command in the console by providing the unique name selected for your Website, and then press Enter:
 
     ```
-    azure resource show --name [Unique Name] --resource-type "Microsoft.Web/Sites" --resource-group rga20532 --api-version "2014-06-01" --json
+    azure resource delete --name [Unique Name] --resource-type "Microsoft.Web/Sites" --resource-group rga20532 --api-version "2014-06-01" --json
     ```
 
 4.  Type **Y** to indicate that you want to remove the Web App, and then press Enter.
@@ -162,9 +162,9 @@
 
 #### Task 1: Open the Azure PowerShell Console
 
-1.  On the Start screen, click the down arrow to view all the applications, and then click **Microsoft Azure PowerShell**.
+1.  On the Start screen, click the down arrow to view all the applications, and then click **Windows PowerShell**.
 
-2.  Switch to the **Microsoft Azure PowerShell** window.
+2.  Switch to the **Windows PowerShell** window.
 
 #### Task 2: Authenticate to Azure Resource Manager Using PowerShell
 
@@ -174,7 +174,7 @@
     Login-AzureRmAccount
     ```
 
-2.  In the **Sign in to Windows Azure** dialog box, perform the following steps:
+2.  In the **Sign in to your account** dialog box, perform the following steps:
 
     a. Enter the email address of your Microsoft account.
 
@@ -198,7 +198,7 @@
     New-AzureRmResourceGroup -Name rgb20532 -Location "West US"
     ```
 
-1.  To provide the parameters for the template, type the following command in the console, perform the following steps:
+1.  To provide the parameters for the template, type the following command in the console, and then perform the following steps:
 
     ```
     New-AzureRmResourceGroupDeployment -ResourceGroupName rgb20532 -TemplateFile "F:\Mod09\Labfiles\azuredeploy.json"
