--- a/Instructions/dotnet/Mod09/20532C_LAB_AK_09.md
+++ b/Instructions/dotnet/Mod09/20532C_LAB_AK_09.md
@@ -236,7 +236,7 @@
 
 7.  Close Internet Explorer.
 
-8.  Switch to the **Microsoft Azure PowerShell** console window.
+8.  Switch to the **Windows PowerShell** console window.
 
 #### Task 4: Remove the resource group by using PowerShell
 
