--- a/Instructions/dotnet/Mod09/20532C_LAB_AK_09.md
+++ b/Instructions/dotnet/Mod09/20532C_LAB_AK_09.md
@@ -236,7 +236,7 @@
 
 7.  Close Internet Explorer.
 
-8.  Switch to the **Microsoft Azure PowerShell** console window.
+8.  Switch to the **Windows PowerShell** console window.
 
 #### Task 4: Remove the resource group by using PowerShell
 
@@ -250,7 +250,7 @@
 
     > **Note:** Because removing a resource group involves removing multiple resources, this process can take 5 to 15 minutes on average.
 
-3.  Close the **Microsoft Azure PowerShell** console window.
+3.  Close the **Windows PowerShell** console window.
 
 > **Results:** After completing this exercise, you will have used Azure to interact with the Resource Manager, resource groups, and resource group templates.
 
