--- a/Instructions/dotnet/Mod01/20532C_LAB_AK_01.md
+++ b/Instructions/dotnet/Mod01/20532C_LAB_AK_01.md
@@ -57,6 +57,12 @@
 
 3. Observe the **Subscriptions** blade that displays.
 
+1. On the left side of the screen, click **Browse** again.
+
+2. Within the list located in the **Browse** panel that displays, click **Portal Settings**.
+
+3. Observe the **Portal Settings** blade that displays.
+
 #### Task 3: Begin a journey
 
 1. At the top-left corner of the screen, click **New**.
