Various Typos in Mod02

--- a/Instructions/dotnet/Mod02/20532C_LAB_AK_02.md
+++ b/Instructions/dotnet/Mod02/20532C_LAB_AK_02.md
@@ -121,12 +121,12 @@
 6. In the **Create virtual machine** blade that displays, click **Basics** and perform the following steps:
 
   a. In the **Name** dialog box, provide the value **vm20532**.
-  
+
   b. In the **VM disk type** list, select the value **HDD**.
 
   b. In the **User Name** dialog box, provide the value **Student**.
 
-  c. In the **Password** dialog box, provide the value **AzurePa$$w0rd**.
+  c. In the **Password** and **Confirm Password** dialog boxes, provide the value **AzurePa$$w0rd**.
 
   d. In the **Resource Group** section, locate the **Use existing** option, and then select the **20532** resource group.
 
