--- a/Instructions/dotnet/Mod02/20532C_LAB_02.md
+++ b/Instructions/dotnet/Mod02/20532C_LAB_02.md
@@ -115,7 +115,7 @@ The main tasks for this exercise are as follows:
 2. Create a new virtual machine using the template and the following details:
 
   - Name: **vm20532**
-  
+
   - VM disk type: **HDD**
 
   - User Name: **Student**
@@ -138,7 +138,7 @@ The main tasks for this exercise are as follows:
 
   - Disk File Name: **vm20532-AllFiles.vhd**
 
-  - Size (GB): **128**
+  - Size (GiB): **128**
 
   - Type: **HDD**
 
