Fixed Typos Mod03

--- a/Instructions/dotnet/Mod03/20532C_LAB_AK_03.md
+++ b/Instructions/dotnet/Mod03/20532C_LAB_AK_03.md
@@ -28,7 +28,7 @@
 
 1. In the **Web App + SQL** blade, click the **Create** button.
 
-4.  In the form that displays, perform the following steps:
+4. In the form that displays, perform the following steps:
 
     a. In the **App name** dialog box, create a unique name for your website.
 
@@ -58,15 +58,7 @@
 
     j. In the **SQL Database** blade, locate the **Name** box and provide the value **EventsContextDB**.
 
-    k. Select the **Pricing tier** option.
-
-    l. In the **Pricing tier** blade, click the **View all** link.
-
-    e. Locate and select the **Free** pricing tier.
-
-    f. Click the **Select** button.
-
-    g. Back in the **SQL Database** blade, click the **Target server** option.
+    k. In the **SQL Database** blade, click the **Target server** option.
 
     h. In the **Server** blade, click the **Create a new server** option.
 
@@ -112,7 +104,7 @@
 
 2.  On the taskbar, click the **File Explorer** icon.
 
-3.  In the Libraries window, go to **Allfiles (F):\Mod03\Labfiles\Starter\Contoso.Events**, and then double-click **Contoso.Events.sln**.
+3.  In the Libraries window, go to **Allfiles (F):\\Mod03\\Labfiles\\Starter\\Contoso.Events**, and then double-click **Contoso.Events.sln**.
 
 5.  In the **Solution Explorer** pane, right-click the **Contoso.Events.Management** project, and then click **Set as Startup Project**.
 
@@ -152,7 +144,7 @@
 
 10.  In the download dialog box, click the arrow to the right of the **Save** button, and then click **Save As**.
 
-11.  In the **Save As** dialog box, go to **Allfiles (F):\Mod03\Labfiles**, and then click **Save**.
+11.  In the **Save As** dialog box, go to **Allfiles (F):\\Mod03\\Labfiles**, and then click **Save**.
 
 #### Task 3: Publish the ASP.NET web application to the Azure Web App
 
@@ -162,7 +154,7 @@
 
 3.  In the **Import from a publish profile file** dialog box, click **Browse**.
 
-4.  In the Libraries window, go to **Allfiles (F):\Mod03\Labfiles**, and then double-click your previously saved publish profile.
+4.  In the Libraries window, go to **Allfiles (F):\\Mod03\\Labfiles**, and then double-click your previously saved publish profile.
 
 5.  Click **OK**.
 
