Fixed Typos Mod04

--- a/Instructions/dotnet/Mod04/20532C_LAB_AK_04.md
+++ b/Instructions/dotnet/Mod04/20532C_LAB_AK_04.md
@@ -56,13 +56,13 @@
 
   a. In the **Location** list, select the region that is closest to your location.
 
-  a. In the **New server** blade, click **OK**.
+  a. In the **New server** blade, click **Select**.
 
-18. In the **SQL database** blade, locate the **Resource group** section and select the existing *20532* resource group.
+10. In the **SQL database** blade, locate the **Resource group** section and select the existing *20532* resource group.
 
-19. Click **Create** to create the SQL database and server.
+11. Click **Create** to create the SQL database and server.
 
-19. Write down the server and database names for the new SQL Database instance.
+12. Write down the server and database names for the new SQL Database instance.
 
 > **Results:** After completing this exercise, you will have created both servers and databases in the SQL Database service.
 
