Disabled Diagnostic Storage Account
Updated Lab 2 instructions to disable Diagnostic Storage Account.

--- a/Instructions/Labs/dotnet/Mod02/20532C_LAB_02.md
+++ b/Instructions/Labs/dotnet/Mod02/20532C_LAB_02.md
@@ -132,6 +132,8 @@ The main tasks for this exercise are as follows:
 
   - Storage Account: **stor20532[Your Name Here]**
 
+  - Diagnostic Storage Account: **Disabled**
+
   - Image: **Windows Server 2012 R2 Datacenter**
 
 3. Add a second disk to the virtual machine by using the following settings:
