--- a/Instructions/Labs/dotnet/Mod02/20532C_LAB_AK_02.md
+++ b/Instructions/Labs/dotnet/Mod02/20532C_LAB_AK_02.md
@@ -150,7 +150,9 @@
 
   c. Click the **Subnet** section and then select **Apps**.
 
-  d. Leave default values for **Public IP Address**, **Network Security Group (firewall)**, **Monitoring** and **Diagnostic Storage Account**.
+  d. Under the **Diagnostic Storage Account** section, select the **Disable** option.
+
+  d. Leave default values for **Public IP Address**, **Network Security Group (firewall)** and **Monitoring**.
 
   e. Scroll down and click **OK**.
 
