--- a/Instructions/Labs/dotnet/Mod09/20532C_LAB_AK_09.md
+++ b/Instructions/Labs/dotnet/Mod09/20532C_LAB_AK_09.md
@@ -1,6 +1,6 @@
 # Module 9: Automating Integration with Azure Resources
 
-# Lab: Automating the Creation of Azure Assets using PowerShell and the xPlat CLI
+# Lab: Automating the Creation of Azure Assets using PowerShell and xPlat CLI
 
 ## Exercise 1: Use xPlat CLI to Create and Manage and Azure Web App
 
