--- a/Instructions/Labs/dotnet/Mod07/20532C_LAB_AK_07.md
+++ b/Instructions/Labs/dotnet/Mod07/20532C_LAB_AK_07.md
@@ -38,11 +38,11 @@
 
 9.  In the **Add a container** blade that displays, perform the following steps:
 
-10. In the **Name** box, type **example**.
+    a. In the **Name** box, type **example**.
 
-11. In the **Access Type** list, select **Container**.
+    b. In the **Access Type** list, select **Container**.
 
-12. Click **OK** to create your container.
+    c. Click **OK** to create your container.
 
 #### Task 3: Add and access blob files in your container
 
