Bug Fixes Mod 04

--- a/Instructions/Labs/dotnet/Mod04/20532C_LAB_04.md
+++ b/Instructions/Labs/dotnet/Mod04/20532C_LAB_04.md
@@ -80,7 +80,7 @@ The main tasks for this exercise are as follows:
 
   - Location: **Select the region that is closest to your location**
 
-3. Record the name of the newly created SQL Database instance.
+3. Record the server and database names associated with the newly created SQL Database instance.
 
 > **Results:** After completing this exercise, you will have created both servers and databases in the SQL Database service.
 
@@ -144,7 +144,9 @@ The main tasks for this exercise are as follows:
 
 3. Update the **EventsContextInitializer** class to inherit from the **CreateDatabaseIfNotExists&lt;EventsContext&gt;** generic class.
 
-4. Add a **using** statement for the **Contoso.Events.Models** namespace.
+4. Add a **using** statement for the **System.Data.Entity** namespace.
+
+1. In the **Contoso.Events.Data** project, open the **EventsContext** class
 
 5. Update the **EventsContext** static constructor with the following lines of code:
 
@@ -154,7 +156,7 @@ The main tasks for this exercise are as follows:
 
 #### Task 2: Implement seed data with DbContext
 
-1. Override the **Seed** method of the **DbMigrationsConfiguration&lt;&gt;** class.
+1. Override the **Seed** method of the **EventsContextInitializer** class.
 
 2. Add a **using** statement for the **Contoso.Events.Models** namespace.
 
