--- a/Instructions/Labs/dotnet/Mod04/20532C_LAB_AK_04.md
+++ b/Instructions/Labs/dotnet/Mod04/20532C_LAB_AK_04.md
@@ -36,27 +36,27 @@
 
 8. Click **Select** to close the blade.
 
-6.  Click **Select Source**. Perform the following actions
+6. Click **Select Source**. Perform the following actions:
 
-  a.  Select the **Blank Database** option.
+    a.  Select the **Blank Database** option.
 
-  a.  In the **SQL database** blade, click **Server**.
+    b.  In the **SQL database** blade, click **Server**.
 
-  a.  In the **Server** blade that displays, click **Create a new server**.
+    c.  In the **Server** blade that displays, click **Create a new server**.
 
-  a. In the **New Server** blade that displays, locate the **Server Name** box.
+    d. In the **New Server** blade that displays, locate the **Server Name** box.
 
-  a. In the **Server Name** box, type **sv20532[*Your Name Here*]**.
+    e. In the **Server Name** box, type **sv20532[*Your Name Here*]**.
 
-  a. In the **Server Admin Login** box, type **testuser**.
+    f. In the **Server Admin Login** box, type **testuser**.
 
-  a. In the **Password** box, type **TestPa$$w0rd**.
+    g. In the **Password** box, type **TestPa$$w0rd**.
 
-  a. In the **Confirm Password** box, type **TestPa$$w0rd**.
+    h. In the **Confirm Password** box, type **TestPa$$w0rd**.
 
-  a. In the **Location** list, select the region that is closest to your location.
+    i. In the **Location** list, select the region that is closest to your location.
 
-  a. In the **New server** blade, click **Select**.
+    j. In the **New server** blade, click **Select**.
 
 10. In the **SQL database** blade, locate the **Resource group** section and select the existing *20532* resource group.
 
@@ -131,8 +131,7 @@
 7.  Add these **using** statements at the top of the code file:
 
     ```
-    using System.Data.Entity; 
-    using System.Data.Entity.Migrations;
+    using System.Data.Entity;
     ```
 
 8.  In the Solution Explorer pane, expand the **Contoso.Events.Data** project.
@@ -153,7 +152,7 @@
 
 2.  In the **Contoso.Events.Data** project, open the **EventsContextInitializer.cs** file.
 
-3.  Add the following method to the **EventsContextInitializer** class:
+3.  Add the following method declaration to the **EventsContextInitializer** class:
 
     ```
     protected override void Seed(EventsContext context){ }
@@ -218,7 +217,7 @@
 
     -   \[login\]: **testuser**
 
-    -   \[server\]: **sv20532\[*Your Name Here*\]**. Note there are two different places to replace \[server\].
+    -   \[server\]: **sv20532\[*Your Name Here*\]**. (Note that there are two different places to replace \[server\].)
 
     -   \[password\]: **TestPa$$w0rd**
 
