Added Visual Studio OOBE instructions to Module 2

--- a/Instructions/Labs/dotnet/Mod02/20532C_LAB_AK_02.md
+++ b/Instructions/Labs/dotnet/Mod02/20532C_LAB_AK_02.md
@@ -8,7 +8,7 @@
 
 1. On the Start screen, click the **Internet Explorer** tile.
 
-2. Go to https://portal.azure.com
+2. Go to <https://portal.azure.com>
 
 3. Enter the email address of your Microsoft account. Click **Continue**.
 
@@ -324,7 +324,33 @@
 
 23. Wait for the extraction process to complete.
 
-> **Results:** After completing this exercise, your development virtual machine will have your lab files installed. Your virtual machine will also have Visual Studio, Azure PowerShell, and the Azure SDK installed already.
+#### Task 4: Add your Azure subscription to Visual Studio
+
+1. On the Start screen, click the **Visual Studio 2015** tile.
+
+2. You will be prompted to sign-in using a **Microsoft Account**. Perform the following steps:
+
+    a. Click the **Sign in** button.
+
+    b. Enter the email address of your Microsoft account. Click **Continue**.
+
+    c. Ensure that the **Keep me signed in** option is selected.
+
+    d. Enter the password for your Microsoft account.
+
+    e. Click **Sign In**.
+
+    > **Note:** You may be prompted by Internet Explorer to remember this password. You can safely close and ignore this dialog.
+
+3. If you have never used **Visual Studio** in the past, you will be prompted to configure settings that will control the appearance of the IDE. You can skip this section and click **OK**.
+
+4. Wait for *Visual Studio* to finish **preparing for first use**.
+
+    > **Note:** This process typically takes between 2 to 5 minutes.
+
+4. Validate that you can see the Visual Studio **Start Page**.
+
+> **Results:** After completing this exercise, your development virtual machine will have your lab files installed. Your virtual machine will also have Visual Studio, Azure PowerShell, and the Azure SDK installed.
 
 ©2016 Microsoft Corporation. All rights reserved.  The text in this document is available under the [Creative Commons Attribution 3.0 License](https://creativecommons.org/licenses/by/3.0/legalcode "Creative Commons Attribution 3.0 License"), additional terms may apply.  All other content contained in this document (including, without limitation, trademarks, logos, images, etc.) are **not** included within the Creative Commons license grant.  This document does not provide you with any legal rights to any intellectual property in any Microsoft product. You may copy and use this document for your internal, reference purposes.  
 This document is provided "as-is." Information and views expressed in this document, including URL and other Internet Web site references, may change without notice. You bear the risk of using it. Some examples are for illustration only and are fictitious. No real association is intended or inferred. Microsoft makes no warranties, express or implied, with respect to the information provided here.
