--- a/Instructions/Labs/dotnet/Mod02/20532C_LAB_02.md
+++ b/Instructions/Labs/dotnet/Mod02/20532C_LAB_02.md
@@ -164,6 +164,8 @@ The main tasks for this exercise are as follows:
 
 1. Create an AllFiles drive and extract the AllFiles Content to it.
 
+1. Authenticate to Visual Studio using the Microsoft Account associated with your Azure subscription.
+
 #### Task 1: Disable IE Enhanced Security Configuration
 
 1. If Server Manager is not already open, open **Server Manager**.
@@ -194,7 +196,17 @@ The main tasks for this exercise are as follows:
 
   - Extract target: **Allfiles** **(F):\\**
 
-> **Results:** After completing this exercise, your development virtual machine will have your lab files installed. Your virtual machine will also have Visual Studio, Azure PowerShell, and the Azure SDK installed already.
+#### Task 4: Add your Azure subscription to Visual Studio
+
+1. Open **Visual Studio 2015**.
+
+2. When prompted, sign-in using the **Microsoft Account** associated with your Azure subscription.
+
+    > **Note:** Ensure that the **Keep me signed in** option is selected when you sign-in.
+
+3. Validate that you can see the Visual Studio **Start Page**.
+
+> **Results:** After completing this exercise, your development virtual machine will have your lab files installed. Your virtual machine will also have Visual Studio, Azure PowerShell, and the Azure SDK installed.
 
 ©2016 Microsoft Corporation. All rights reserved.  The text in this document is available under the [Creative Commons Attribution 3.0 License](https://creativecommons.org/licenses/by/3.0/legalcode "Creative Commons Attribution 3.0 License"), additional terms may apply.  All other content contained in this document (including, without limitation, trademarks, logos, images, etc.) are **not** included within the Creative Commons license grant.  This document does not provide you with any legal rights to any intellectual property in any Microsoft product. You may copy and use this document for your internal, reference purposes.  
 This document is provided "as-is." Information and views expressed in this document, including URL and other Internet Web site references, may change without notice. You bear the risk of using it. Some examples are for illustration only and are fictitious. No real association is intended or inferred. Microsoft makes no warranties, express or implied, with respect to the information provided here.  
