Bug Fixes Mod 6

--- a/Instructions/Labs/dotnet/Mod06/20532C_LAB_06.md
+++ b/Instructions/Labs/dotnet/Mod06/20532C_LAB_06.md
@@ -72,9 +72,13 @@ The main tasks for this exercise are as follows:
 
 1. From the **GetRegistrantNames** method, remove the existing code.
 
-1. Using the **\_tableClient** variable, create a new **CloudTable** instance by using the **GetTableReference** method with the following parameters:
+1. Using the **_tableClient** variable, create a new **CloudTable** instance by using the **GetTableReference** method with the following parameters:
 
   -   tableName: **EventRegistrations**
+
+  ```
+  CloudTable table = _tableClient.GetTableReference("EventRegistrations");
+  ```
 
 #### Task 2: Retrieve strongly-typed registration records by partition key
 
@@ -138,7 +142,7 @@ The main tasks for this exercise are as follows:
 3.  Create a **CloudStorageAccount** variable by using the **Microsoft.WindowsAzure.Storage.ConnectionString** stored in the Cloud configuration files as shown in the following code:
 
     ```
-    string connectionString = ConfigurationManager.AppSettings["StorageConnectionString"];   
+    string connectionString = ConfigurationManager.AppSettings["Microsoft.WindowsAzure.Storage.ConnectionString"];
     var storageAccount = CloudStorageAccount.Parse(connectionString);
     ```
 
@@ -172,7 +176,7 @@ The main tasks for this exercise are as follows:
 3.  Create a *CloudStorageAccount* variable by using the **Microsoft.WindowsAzure.Storage.ConnectionString** stored in the Cloud configuration files as shown in the following code:
 
     ```
-    string connectionString = ConfigurationManager.AppSettings["StorageConnectionString"];
+    string connectionString = ConfigurationManager.AppSettings["Microsoft.WindowsAzure.Storage.ConnectionString"];
     var storageAccount = CloudStorageAccount.Parse(connectionString);
     ```
 
@@ -242,7 +246,9 @@ The main tasks for this exercise are as follows:
 
   - Location: **Select the region that is closest to your location**
 
-3. Record the *connection string* of the newly created Storage Account instance.
+3. Record the *account name* for your newly created Storage Account instance.
+
+4. Select an access key and record the *key* and *connection string* for that key.
 
 #### Task 2: Run the data generation console project to populate the Azure storage table with data
 
@@ -254,7 +260,9 @@ The main tasks for this exercise are as follows:
 
 #### Task 3: Use Server Explorer in Visual Studio 2015 to view table storage registrations
 
-1.  In the **Cloud Explorer** pane, open the **Storage Accounts** node.
+1.  In the **Server Explorer** pane, open the **Storage** node.
+
+1.  Attach your newly created **Storage Account** using the data from the connection information you recorded earlier.
 
 2.  In the node associated with your Storage Account, open the **EventRegistrations** table.
 
@@ -262,11 +270,11 @@ The main tasks for this exercise are as follows:
 
 #### Task 4: Debug the web and worker projects to register for the event
 
-1. Update the **app.config** file in the project to use your *Storage Account*'s connection string in the **StorageConnectionString** *AppSetting*.
+1. Update your solution configuration to start both the **Contoso.Events.Web** and **Contoso.Events.Worker** projects when the solution is debugged.
 
-1. Start the **Contoso.Events.Worker** project without debugging.
+1. Update the **web.config** file in the **Contoso.Events.Web** project to use your *Storage Account*'s connection string in the **Microsoft.WindowsAzure.Storage.ConnectionString** *AppSetting*.
 
-1. Update the **app.config** file in the project to use your *Storage Account*'s connection string in the following locations:
+1. Update the **app.config** file in the **Contoso.Events.Worker** project to use your *Storage Account*'s connection string in the following locations:
 
     - **StorageConnectionString** *AppSetting*
 
@@ -274,15 +282,15 @@ The main tasks for this exercise are as follows:
 
     - **AzureWebJobsDashboard** *ConnectionString*
 
-1. Debug the **Contoso.Events.Web** project.
+1. Debug the **Contoso.Events.Web** and **Contoso.Events.Worker** projects.
 
-2.  Register for an event by using the website.
+2. Register for an event by using the website.
 
 #### Task 5: Use Server Explorer in Visual Studio 2015 to view the new table storage registration
 
 1.  Switch to the **Contoso.Events – Microsoft Visual Studio** window
 
-2.  Open the **Cloud Explorer** pane.
+2.  Open the **Server Explorer** pane.
 
 3.  Open the **EventRegistrations** table in the Azure Storage Account.
 
