--- a/Instructions/Labs/dotnet/Mod06/20532C_LAB_AK_06.md
+++ b/Instructions/Labs/dotnet/Mod06/20532C_LAB_AK_06.md
@@ -123,13 +123,13 @@
 7.  At the end of the **StoreRegistration** method and before the closing parenthesis, get the connection string by using the **CloudConfigurationManager.GetSetting** static method and the **Microsoft.WindowsAzure.Storage.ConnectionString** value as the parameter:
 
     ```
-    string connectionString = ConfigurationManager.AppSettings["StorageConnectionString"];
+    string connectionString = ConfigurationManager.AppSettings["Microsoft.WindowsAzure.Storage.ConnectionString"];
     ```
 
 8.  Use the **CloudStorageAccount.Parse** static method with the connection string as the parameter to get the storage account:
 
     ```
-    var storageAccount = Microsoft.WindowsAzure.Storage.CloudStorageAccount.Parse(connectionString);
+    var storageAccount = Microsoft.WindowsAzure.Storage.CloudStorageAccount.Parse(connectionString);
     ```
 
 9.  At the end of the **StoreRegistration** method and before the closing parenthesis, create a *CloudTableClient* variable by using the **CreateCloudTableClient** method of the storage account:
@@ -185,13 +185,13 @@
 5.  At the end of the **RegisterViewModel** constructor and before the closing parenthesis, get the connection string using the **CloudConfigurationManager. GetSetting** static method and the **Microsoft.WindowsAzure.Storage.ConnectionString** value as the parameter:
 
     ```
-    string connectionString = ConfigurationManager.AppSettings["StorageConnectionString"];
+    string connectionString = ConfigurationManager.AppSettings["Microsoft.WindowsAzure.Storage.ConnectionString"];
     ```
 
 6.  Use the **CloudStorageAccount.Parse** static method with the connection string as the parameter to get the storage account:
 
     ```
-    var storageAccount = Microsoft.WindowsAzure.Storage.CloudStorageAccount.Parse(connectionString);
+    var storageAccount = Microsoft.WindowsAzure.Storage.CloudStorageAccount.Parse(connectionString);
     ```
 
 7.  At the end of the **RegisterViewModel** constructor and before the closing parenthesis, create a *CloudTableClient* variable by using the **CreateCloudTableClient** method of the storage account:
@@ -268,35 +268,43 @@
 
 5. In the **Create storage account** blade that displays, perform the following steps:
 
-  a. In the **Name** box, provide a globally unique value.
+    a. In the **Name** box, provide a globally unique value.
 
-  b. In the **Deployment model** section, ensure that the *Resource manager* option is selected.
+    b. In the **Deployment model** section, ensure that the *Resource manager* option is selected.
 
-  c. In the **Account kind** list, ensure that the *General purpose* option is selected.
+    c. In the **Account kind** list, ensure that the *General purpose* option is selected.
 
-  b. In the **Performance** section, ensure that the *Standard* option is selected.
+    d. In the **Performance** section, ensure that the *Standard* option is selected.
 
-  b. Click on the **Replication** list and select the **Locally Redundant (LRS)** option.
+    e. Click on the **Replication** list and select the **Locally Redundant (LRS)** option.
 
-  c. In the **Location** list, select the region closest to your current location.
+    f. In the **Location** list, select the region closest to your current location.
 
-  f. In the **Resource group** section, select the **Use existing** option.
+    g. In the **Resource group** section, select the **Use existing** option.
 
-  g. In the **Resource group** section, locate the dialog box and provide the value **20532**.
+    h. In the **Resource group** section, locate the dialog box and provide the value **20532**.
 
-  f. Ensure that the **Pin to dashboard** option is selected.
+    i. Ensure that the **Pin to dashboard** option is selected.
 
-  e. Click **Create**.
+    j. Click **Create**.
 
 6. Once the **Storage account** instance is created, the blade for the new instance will open automatically.
 
-7. In the **Storage account** blade, click the **Settings** button at the top of the blade.
+7. In the **Storage account** blade, record the name of your *storage account*.
+
+8. Click the **Settings** button at the top of the blade.
 
 8. In the **Settings** blade, select the **Access keys** option.
 
-9. In the **Access keys** blade, select any key listed and click the three ellipsis (...) button to the right of the key. Once clicked, select the **View connection string** option.
+9. In the **Access keys** blade, locate a key that you wish to use.
 
-10. In the **View connection string** dialog, record your connection string.
+    > **Note:** you can use any of the keys listed for this lab.
+
+10. Record the *Key* value listed for the access key you selected.
+
+11. For the access key you selected, click the three ellipsis (...) button to the right of the key. Once clicked, select the **View connection string** option.
+
+10. In the **View connection string** dialog, record your connection string for the access key you selected.
 
     > **Note:** This connection string will be used in various parts of this lab.
 
@@ -304,9 +312,9 @@
 
 #### Task 2: Run the data generation console project to populate the Azure storage table with data
 
-1.  In the **Solution Explorer** pane, expand the **Shared** solution folder.
+1. In the **Solution Explorer** pane, expand the **Shared** solution folder.
 
-2.  In the **Solution Explorer** pane, expand the **Contoso.Events.Data.Generation** project.
+2. In the **Solution Explorer** pane, expand the **Contoso.Events.Data.Generation** project.
 
 3. Locate and open the **app.config** file in the project.
 
@@ -318,19 +326,35 @@
 
 5. Update the setting by replacing the value of the **value** attribute (currently *UseDevelopmentStorage=true*) with your *Storage Account*'s connection string.
 
-3.  In the **Solution Explorer** pane, right-click the **Contoso.Events.Data.Generation** project, point to **Debug**, and then click **Start New Instance**.
+3. In the **Solution Explorer** pane, right-click the **Contoso.Events.Data.Generation** project, point to **Debug**, and then click **Start New Instance**.
 
 4. Wait for debugging to complete (when the console window closes).
 
 #### Task 3: Use Server Explorer in Visual Studio 2015 to view table storage registrations
 
-1.  On the **View** menu, click **Cloud Explorer**.
+1.  On the **View** menu, click **Server Explorer**.
 
-2.  Locate the **Storage Accounts** node and click the arrow at the left side.
+1.  In the **Server Explorer** pane, locate and click the arrow at the left side of the **Azure** node to expand the node.
+
+2.  Locate the **Storage** node and click the arrow at the left side to expand the node.
 
 4.  If prompted for your account credentials, sign in by using your **Microsoft Account**.
 
-5.  Expand the node for your newly created *Storage Account* under the **Storage Accounts** node.
+4.  Right-click the **Storage** node and select the **Attach External Storage** option.
+
+5.  In the **Add New Storage Account** dialog, perform the following actions:
+
+    a. Enter the **Account name** and **Account key** from your connection information recorded earlier in this lab.
+
+    b. Ensure that the **Remember account key** option is selected.
+
+    c. Ensure that the **Use HTTPS (Recommended)** option is selected in the *Connection* section.
+
+    d. Ensure that the value in the **Preview connection string** section matches the *connection string* you recorded earlier.
+
+    d. Click the **OK** button.
+
+5.  In the **Server Explorer** pane, expand the node for your newly added *Storage Account* under the **Storage Accounts** node.
 
 6.  Expand the **Tables** node immediately under your *Storage Account*'s node.
 
@@ -346,7 +370,7 @@
 
 #### Task 4: Debug the web and worker projects to register for the event
 
-1.  In the **Solution Explorer** pane, right-click the **Contoso.Events** solution, and then click **Properties**.
+1. In the **Solution Explorer** pane, right-click the **Contoso.Events** solution, and then click **Properties**.
 
 1. Navigate to the **Startup Project** section located under the **Common Properties** header.
 
@@ -358,16 +382,16 @@
 
 1. Click the **OK** button to close the *Property* dialog.
 
-1.  In the **Solution Explorer** pane, expand the **Roles** solution folder.
+1. In the **Solution Explorer** pane, expand the **Roles** solution folder.
 
-2.  In the **Solution Explorer** pane, expand the **Contoso.Events.Web** project.
+2. In the **Solution Explorer** pane, expand the **Contoso.Events.Web** project.
 
 3. Locate and open the **web.config** file in the project.
 
 4. Within the **web.config** file, locate the following configuration setting:
 
     ```
-    <add key="StorageConnectionString" value="UseDevelopmentStorage=true" />
+    <add key="Microsoft.WindowsAzure.Storage.ConnectionString" value="UseDevelopmentStorage=true" />
     ```
 
 5. Update the setting by replacing the value of the **value** attribute (currently *UseDevelopmentStorage=true*) with your *Storage Account*'s connection string.
@@ -416,9 +440,9 @@
 
 1.  Switch to the **Contoso.Events – Microsoft Visual Studio** window.
 
-1.  On the **View** menu, click **Cloud Explorer**.
+1.  On the **View** menu, click **Server Explorer**.
 
-2.  Locate the **Storage Accounts** node and click the arrow at the left side.
+2.  Locate the **Storage** node under the **Azure** node and click the arrow at the left side.
 
 4.  If prompted for your account credentials, sign in by using your **Microsoft Account**.
 
